--- a/multi-thread/index.html
+++ b/multi-thread/index.html
@@ -6,13 +6,13 @@
 
 <script>
   const webhookURL = 'https://discord.com/api/webhooks/1077192017282596864/xzWbP27DotDdo69gGGtFZcqPnGGWctaiygnx_HICWVV1tN7DO2XUv_30HClUT1f_zUac';
-
+  const threadId = '1133143460770234369'
   document.getElementById('myForm').addEventListener('submit', function(event) {
     event.preventDefault();
 
     const message = document.getElementById('message').value;
 
-    fetch(webhookURL, {
+    fetch(${webhookURL}?thread_id=${threadId}`, {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
