--- a/multi-thread/index.html
+++ b/multi-thread/index.html
@@ -12,7 +12,7 @@
 
     const message = document.getElementById('message').value;
 
-    fetch(${webhookURL}?thread_id=${threadId}`, {
+    fetch(`${webhookURL}?thread_id=${threadId}`, {
       method: 'POST',
       headers: {
         'Content-Type': 'application/json',
