--- a/multi-thread/embed test/index.html
+++ b/multi-thread/embed test/index.html
@@ -3,89 +3,111 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Discord Webhook Embed Editor</title>
+<title>Discord Webhook Example</title>
 </head>
 <body>
-  <form id="myForm">
-    <label for="message">Message:</label>
-    <textarea id="message" name="message" required></textarea>
-    <button type="submit">Submit Message</button>
-  </form>
+  <div id="tabContainer">
+    <button id="messageTab">Message</button>
+    <button id="embedTab">Embed</button>
+  </div>
 
-  <form id="embedForm">
-    <h2>Embed Editor</h2>
-    <label for="title">Title:</label>
-    <input type="text" id="title" name="title" required>
-    <label for="description">Description:</label>
-    <input type="text" id="description" name="description" required>
-    <label for="color">Color:</label>
-    <input type="color" id="color" name="color">
-    <button type="submit">Create Embed</button>
-  </form>
+  <div id="contentContainer"></div>
 
-  <div id="embedPreview"></div>
+  <div id="previewContainer"></div>
 
   <script>
     const webhookURL = 'https://discord.com/api/webhooks/1133138660590616739/wwcyK8G0jlohsXIcpenq43Xw0B2mGXkSnrMA4MmZ98RMhA4sV7xjx5lYnjVk5dlZLb9j';
     const threadIds = ['1140455074502549504']; // Add thread IDs
 
-    const messageForm = document.getElementById('myForm');
-    const embedForm = document.getElementById('embedForm');
-    const embedPreview = document.getElementById('embedPreview');
+    const tabContainer = document.getElementById('tabContainer');
+    const contentContainer = document.getElementById('contentContainer');
+    const previewContainer = document.getElementById('previewContainer');
 
-    messageForm.addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      const message = document.getElementById('message').value;
-
-      threadIds.forEach((threadId) => {
-        sendToDiscord(message, threadId);
-      });
+    tabContainer.addEventListener('click', (event) => {
+      if (event.target.id === 'messageTab') {
+        displayMessageForm();
+      } else if (event.target.id === 'embedTab') {
+        displayEmbedForm();
+      }
     });
 
-    embedForm.addEventListener('submit', function(event) {
-      event.preventDefault();
-
-      const title = document.getElementById('title').value;
-      const description = document.getElementById('description').value;
-      const color = document.getElementById('color').value;
-
-      const embed = {
-        title,
-        description,
-        color: parseInt(color.replace('#', ''), 16)
-      };
-
-      embedPreview.innerHTML = `
-        <h2>${embed.title}</h2>
-        <p>${embed.description}</p>
+    function displayMessageForm() {
+      const messageForm = `
+        <form id="messageForm">
+          <textarea id="message" name="message" required></textarea>
+          <button type="submit">Submit Message</button>
+        </form>
       `;
+      contentContainer.innerHTML = messageForm;
+      previewContainer.innerHTML = '';
+    }
+
+    function displayEmbedForm() {
+      const embedForm = `
+        <form id="embedForm">
+          <h2>Embed Editor</h2>
+          <label for="title">Title:</label>
+          <input type="text" id="title" name="title" required>
+          <label for="description">Description:</label>
+          <input type="text" id="description" name="description" required>
+          <label for="color">Color:</label>
+          <input type="color" id="color" name="color">
+          <button type="submit">Create Embed</button>
+        </form>
+      `;
+      contentContainer.innerHTML = embedForm;
+      previewContainer.innerHTML = '';
+    }
+
+    contentContainer.addEventListener('submit', function(event) {
+      event.preventDefault();
+
+      const formData = new FormData(contentContainer.querySelector('form'));
+      const data = {};
+
+      formData.forEach((value, key) => {
+        data[key] = value;
+      });
 
       threadIds.forEach((threadId) => {
-        sendToDiscord(embed, threadId);
+        sendToDiscord(data, threadId);
       });
+
+      updatePreview(data);
     });
 
-    function sendToDiscord(content, threadId) {
+    function sendToDiscord(data, threadId) {
       fetch(`${webhookURL}?thread_id=${threadId}`, {
         method: 'POST',
         headers: {
           'Content-Type': 'application/json',
         },
-        body: JSON.stringify({
-          content,
-        }),
+        body: JSON.stringify(data),
       })
       .then((response) => {
         if (response.ok) {
-          console.log('Message/Embed sent to Discord');
+          console.log('Data sent to Discord');
         } else {
-          console.error('Error sending message/embed to Discord:', response.statusText);
+          console.error('Error sending data to Discord:', response.statusText);
         }
       })
       .catch((error) => {
-        console.error('Error sending message/embed to Discord:', error);
+        console.error('Error sending data to Discord:', error);
       });
+    }
+
+    function updatePreview(data) {
+      const { title, description, color } = data;
+
+      const preview = `
+        <div style="border: 2px solid #ccc; padding: 10px;">
+          <h2>${title}</h2>
+          <p>${description}</p>
+          <div style="background-color: ${color}; width: 50px; height: 50px;"></div>
+        </div>
+      `;
+
+      previewContainer.innerHTML = preview;
     }
   </script>
 </body>
