--- a/multi-thread/embed test/index.html
+++ b/multi-thread/embed test/index.html
@@ -23,6 +23,9 @@
             <input type="checkbox" id="sendToThread" name="sendToThread">
             <label for="threadId">Thread ID:</label>
             <input type="text" id="threadId" name="threadId" placeholder="Enter thread ID" disabled>
+            <label for="importThreads">Import Threads:</label>
+            <input type="file" id="importThreads" name="importThreads">
+            <div id="threadList"></div>
             <button type="submit">Send Message</button>
         </form>
         <div id="result"></div>
